[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
gloo-console = "0.3.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
web-sys = { version = "0.3.64", features = ["HtmlTextAreaElement", "HtmlInputElement", "Text"] }
wherego = { version = "0.1.0", path = "../wherego" }
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.9.4"
